# puma

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE_CODE_INSTRUCTIONS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  emissions.csv  index.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start_puma.sh
.github/workflows/: lint-and-test.yml  release.yml  smoke.yml
agents/: __init__.py  code_generator_agent.py  estimation_agent.py  orchestrator.py  reviewer_agent.py  tester_agent.py  triage_agent.py
config/: models_catalog.yaml  profiles.yaml  runtime_profile.yaml
data/: jira_balanced_200.csv
db/: README.md
docs/: adding_models.md  adding_scenarios.md  architecture.md  baseline_inventory.md  metrics_reference.md  open_questions.md  scenarios_reference.md  troubleshooting.md  user_guide.md
reports/: summary_report.json
results/: benchmark_gemma3_4b_estimation_tawos.json  benchmark_gemma3_4b_triage_jira.json  benchmark_history.csv  benchmark_qwen2.5_3b_triage_jira.json  estimation_cache.json  estimation_metrics.json  triage_cache.json  triage_metrics.json
results/_tmp_specs/: bench_gemma3_4b_estimation_tawos.yaml  bench_gemma3_4b_prioritization_jira.yaml  bench_gemma3_4b_triage_jira.yaml  bench_gemma4_e2b_estimation_tawos.yaml  bench_gemma4_e2b_triage_jira.yaml  bench_qwen2.5_3b_estimation_tawos.yaml  bench_qwen2.5_3b_prioritization_jira.yaml  bench_qwen2.5_3b_triage_jira.yaml
scripts/: cleanup_results.sh  create_jira_data.py  download_datasets.py  run_all_models.sh
specs/: architecture.md  constitution.md  datasets.spec.md  estimation-agent.spec.md  preflight.spec.md  runtime.spec.md  scenarios.spec.md  triage-agent.spec.md
specs/prompts/: triage-zero-shot.md  (+3 more)
src/: cleanup.py  data_prep.py  evaluate_estimation.py  evaluate_triage.py  history.py  rag_index.py  statistical_analysis.py
tests/: conftest.py  test_core.py
(+124 files in other folders)
